kubernetes/apps/networking/external-dns/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-dns-default-deny
spec:
  podSelector:
    matchLabels: { app.kubernetes.io/instance: external-dns }
  policyTypes: [Ingress, Egress]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-egress
spec:
  endpointSelector:
    matchLabels: { app.kubernetes.io/instance: external-dns }
  egress:
    - toEntities: [kube-apiserver]
      toPorts:
        - ports:
            - { port: "443", protocol: TCP }
            - { port: "6443", protocol: TCP }
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
    - toCIDR: [10.25.13.33/32]
      toPorts:
        - ports:
            - { port: "53", protocol: TCP }
            - { port: "53", protocol: UDP }
